Closed Bug 232219 Opened 22 years ago Closed 22 years ago

mem leak in nsGNOMERegistry::GetFromType

Categories

(Core Graveyard :: File Handling, defect)

x86
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: chpe, Assigned: chpe)

Details

(Keywords: memory-leak)

Attachments

(1 file)

User-Agent: Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.0.1) Gecko/20020823 Netscape/7.0 In nsGNOMERegistry::GetFromType, "commandPath" variable is allocated from g_find_program_in_path(), but not freed. Reproducible: Always Steps to Reproduce:
Attachment #139912 - Flags: superreview?(bryner)
Attachment #139912 - Flags: review?(bryner)
Keywords: mlk
Comment on attachment 139912 [details] [diff] [review] proposed fix r=darin
Attachment #139912 - Flags: review?(bryner) → review+
Attachment #139912 - Flags: superreview?(bryner) → superreview+
confirming christian, do you have cvs access, or should I check this in for you?
Status: UNCONFIRMED → NEW
Ever confirmed: true
I do not have cvs commit access.
Assignee: file-handling → chpe
checked in, thanks for the patch! Checking in unix/nsGNOMERegistry.cpp; /cvsroot/mozilla/uriloader/exthandler/unix/nsGNOMERegistry.cpp,v <-- nsGNOMERegistry.cpp new revision: 1.6; previous revision: 1.5 done
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: