bug 232219, memory leak in nsGNOMERegisty::GetFromType patch by Christian Persch <chpe@gnome.org> r=darin sr=bryner